refactor: rename SDK terminology to Connect terminology
- Rename MultichainSDK to MultichainConnect
- Rename SDKState to ConnectState
- Rename SDKEvents to ConnectEvents
- Rename createMetamaskSDK to createMetamaskConnect
- Rename SDKVersion to ConnectVersion component
- Update sdkVersion to connectVersion properties
- Update build configuration global names
- Update documentation and comments to use 'MetaMask Connect Module'
- Update test files and mock references
- Update logger namespaces and package descriptions

--- a/packages/sdk-multichain-ui/src/index.html
+++ b/packages/sdk-multichain-ui/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
-    <title>SDK Install Modal Web</title>
+    <title>MetaMask Connect Install Modal Web</title>
     <script type="module" src="/build/sdk-install-modal-web.esm.js"></script>
     <script nomodule src="/build/sdk-install-modal-web.js"></script>
     <style>
@@ -42,7 +42,7 @@
         <h2>Install Modal</h2>
         <mm-install-modal
           link="https://example.com/install"
-          sdk-version="1.0.0"
+          connect-version="1.0.0"
           prefer-desktop="true"
         ></mm-install-modal>
       </div>
